--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- SEO meta data -->
     <meta name="description"
         content="Find out the Uber driver requirements to get the information of how much an Uber driver makes. Meeting the requirements for the signup is easy." />
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <link rel="canonical" href="https://daviddadev.github.io/driver-requirements/." />
+    <link rel="canonical" href="https://thetacticaldriver.github.io/driver-requirements/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Uber Driver Requirements - Make Money with Uber (2020)" />
     <meta property="og:description"
         content="Find out the Uber driver requirements to get the information of how much an Uber driver makes. Meeting the requirements for the signup is easy." />
-    <meta property="og:url" content="https://daviddadev.github.io/driver-requirements/." />
+    <meta property="og:url" content="https://thetacticaldriver.github.io/driver-requirements/" />
     <meta property="og:site_name" content="The Tactical Driver" />
     <meta property="article:tag" content="uber driver" />
     <meta property="article:tag" content="uber driver requirements" />
@@ -34,7 +36,7 @@
     <meta name="twitter:image"
         content="" />
 
-    <title>Uber Driver Requirements - Make Money with Uber (2029)</title>
+    <title>Uber Driver Requirements - Make Money with Uber (2020)</title>
     <link rel="stylesheet" href="blog.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -86,7 +88,7 @@
     process of driving for Uber. You will be able to sign up and get an account within minutes.</p>
 
     <p>I’ll cover the Uber driver requirements for UberX, XL, Select, and Pool. Lyft, as well too. This article will allow you to fill out an
-    <a href="https://partners.uber.com/i/vvcr4j2gb">Uber</a> and or <a href="https://www.lyft.com/drivers/DAVID688846?utm_medium=d2da_iacc">Lyft</a> application with high chances of becoming a Rideshare driver FAST!</p>
+    <a class="link" href="https://partners.uber.com/i/vvcr4j2gb">Uber</a> and or <a class="link" href="https://www.lyft.com/drivers/DAVID688846?utm_medium=d2da_iacc">Lyft</a> application with high chances of becoming a Rideshare driver FAST!</p>
 
     <p>So, how to become an Uber driver? To become an Uber driver you must meet the requirements set by Uber. The minimum age
     of 21 with a valid 1 year US license, 4 door vehicle, and in-state auto insurance is required.</p>
@@ -149,7 +151,7 @@
         <li>4 Door vehicle which can transport a minimum of 4 passengers</li>
         <li>New or nothing older than 15 years old</li>
         <li>No salvaged, reconstructed or rebuilt titles</li>
-        <li>Rental prohibited unless approved by Uber programs like <a href="https://www.fair.com/uber/driver-partner">FAIR Car Rental</a></li>
+        <li>Rental prohibited unless approved by Uber programs like <a class="link" href="https://www.fair.com/uber/driver-partner">FAIR Car Rental</a></li>
         <li>Cosmetic damage, missing parts, commercial branding or taxi cab paint jobs not allowed</li>
     </ul>
 
@@ -160,7 +162,7 @@
     <p><strong>Here is a quick summary of the necessary steps:</strong></p>
 
     <ul>
-        <li><strong>Step 1</strong>Fill out the tactical driver application here for <a href="https://partners.uber.com/i/vvcr4j2gb">Uber</a> and this one for <a href="https://www.lyft.com/drivers/DAVID688846?utm_medium=d2da_iacc">Lyft</a>.</li>
+        <li><strong>Step 1</strong>Fill out the tactical driver application here for <a class="link" href="https://partners.uber.com/i/vvcr4j2gb">Uber</a> and this one for <a class="link" href="https://www.lyft.com/drivers/DAVID688846?utm_medium=d2da_iacc">Lyft</a>.</li>
         <li><strong>Step 2</strong>Complete a car inspection to meet Uber requirements.</li>
         <li><strong>Step 3</strong>Wait patiently for your background check to clear.</li>
         <li><strong>Step 4</strong>Switch Online button in the app and start driving.</li>
@@ -184,7 +186,7 @@
 
     <p>UberEATS is a delivery app that allows Uber customers to order food on demand from nearby local restaurants. The
     UberEATS delivery drivers pick up and drop off food orders as independent contractors. Many Uber drivers choose Uber
-    Eats versus driving for <a href="https://drd.sh/z4sh44/">DoorDash</a> or <a href="https://pmfleet.app.link/quSRvHinS2">Postmates</a>.</p>
+    Eats versus driving for <a class="link" href="https://drd.sh/z4sh44/">DoorDash</a> or <a class="link" href="https://pmfleet.app.link/quSRvHinS2">Postmates</a>.</p>
 
     <p>What are the Uber Eats driver requirements? You can become an Uber Eats driver without driving for UberX. Current UberX
     drivers can simply opt-in to start receiving UberEATS request.</p>
@@ -207,8 +209,8 @@
 
     <hr>
 
-    <p><a href="https://partners.uber.com/i/vvcr4j2gb">Click Here and get up to $1,200 SIGN-UP BONUS from UBER with my referral.</a></p>
-    <p><a href="https://www.lyft.com/drivers/DAVID688846?utm_medium=d2da_iacc">Click Here and get up to $1,100 SIGN-UP BONUS from LYFT with my referral.</a></p>
+    <p><a class="" href="https://partners.uber.com/i/vvcr4j2gb">Click Here and get up to $1,200 SIGN-UP BONUS from UBER with my referral.</a></p>
+    <p><a class="" href="https://www.lyft.com/drivers/DAVID688846?utm_medium=d2da_iacc">Click Here and get up to $1,100 SIGN-UP BONUS from LYFT with my referral.</a></p>
 
 </div>
 
